# docs/swagger.yaml
@@ -26,6 +26,31 @@ definitions:
       orderedAt:
         type: string
     type: object
+  request.CreateItemRequest:
+    properties:
+      description:
+        type: string
+      itemCode:
+        type: string
+      quantity:
+        type: integer
+    required:
+    - description
+    - itemCode
+    - quantity
+    type: object
+  request.CreateOrderRequest:
+    properties:
+      customerName:
+        type: string
+      items:
+        items:
+          $ref: '#/definitions/request.CreateItemRequest'
+        type: array
+    required:
+    - customerName
+    - items
+    type: object
   response.ErrorResponse:
     properties:
       error:
@@ -57,6 +82,35 @@ paths:
           schema:
             $ref: '#/definitions/response.ErrorResponse'
       summary: Get all orders
+      tags:
+      - Orders
+    post:
+      consumes:
+      - application/json
+      description: Create new orders
+      parameters:
+      - description: Request Body
+        in: body
+        name: req
+        required: true
+        schema:
+          $ref: '#/definitions/request.CreateOrderRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Orders'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      summary: Create new order
       tags:
       - Orders
 swagger: "2.0"
