# models/items.go
@@ -2,13 +2,7 @@ package models
 
 import "gorm.io/gorm"
 
-type Items struct {
-	Id      uint8  `json:"itemId" gorm:"primaryKey"`
-	Code    string `json:"itemCode" gorm:"not null"`
-	Desc    string `json:"description" gorm:"not null"`
-	Qty     uint8  `json:"quantity" gorm:"not null"`
-	OrderId uint8
-}
+
 
 func GetItems(id uint8, Db *gorm.DB) []Items {
 	items := []Items{}
@@ -17,3 +11,8 @@ func GetItems(id uint8, Db *gorm.DB) []Items {
 
 	return items
 }
+
+// func CreateItem(item Items, Db *gorm.DB) error {
+// 	err := Db.Create(&item)
+// 	return nil
+// }
